Minor Update : Refactoring!

--- a/UORespawnApp/Components/Controls/InstructionsComponent.razor
+++ b/UORespawnApp/Components/Controls/InstructionsComponent.razor
@@ -476,7 +476,7 @@
 
                     <div class="alert alert-info mt-3">
                         <span class="bi bi-lightbulb"></span> <strong>Command Syntax:</strong> All commands start with 
-                        <code>[</code> (bracket) but do NOT end with a closing bracket. For example: type <code>[ReloadRespawn</code> 
+                        <code>[</code>. For example: type <code>[ReloadRespawn</code> 
                         and press Enter - that's it!
                     </div>
 
