--- a/UORespawnApp/Components/Layout/MainLayout.razor
+++ b/UORespawnApp/Components/Layout/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+<LoadingIndicator />
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -11,3 +13,5 @@
         </article>
     </main>
 </div>
+
+
