--- a/UORespawnApp/Components/_Imports.razor
+++ b/UORespawnApp/Components/_Imports.razor
@@ -8,4 +8,7 @@
 @using UORespawnApp
 @using UORespawnApp.Components
 @using UORespawnApp.Components.Controls
+@using UORespawnApp.Components.Layout
 @using UORespawnApp.Scripts.Utilities
+@using UORespawnApp.Scripts.Services
+
