--- a/UORespawnApp/Components/Layout/NavMenu.razor
+++ b/UORespawnApp/Components/Layout/NavMenu.razor
@@ -30,16 +30,18 @@
         </div>
         
         <hr style="border-color: rgba(255,255,255,0.2); margin: 10px 15px;" />
-        
+
         <div class="nav-item px-3 mb-2">
             <label class="map-label small mb-1">Current Map:</label>
-            <select class="form-select form-select-sm" @onchange="OnMapChanged">
-                <option value="0" selected="@(ViewService.CurrentMap == GameMap.Map0)">Felucca</option>
-                <option value="1" selected="@(ViewService.CurrentMap == GameMap.Map1)">Trammel</option>
-                <option value="2" selected="@(ViewService.CurrentMap == GameMap.Map2)">Ilshenar</option>
-                <option value="3" selected="@(ViewService.CurrentMap == GameMap.Map3)">Malas</option>
-                <option value="4" selected="@(ViewService.CurrentMap == GameMap.Map4)">Tokuno</option>
-                <option value="5" selected="@(ViewService.CurrentMap == GameMap.Map5)">Ter Mur</option>
+            <select class="form-select form-select-sm" 
+                @bind:get="ViewService.CurrentMap" 
+                @bind:set="(GameMap value) => ViewService.SetMap(value)">
+            <option value="@GameMap.Map0">Felucca</option>
+            <option value="@GameMap.Map1">Trammel</option>
+            <option value="@GameMap.Map2">Ilshenar</option>
+            <option value="@GameMap.Map3">Malas</option>
+            <option value="@GameMap.Map4">Tokuno</option>
+            <option value="@GameMap.Map5">Ter Mur</option>
             </select>
         </div>
         
@@ -102,14 +104,6 @@
 
     private void ToggleMenu()
     {
-    }
-
-    private void OnMapChanged(ChangeEventArgs e)
-    {
-        if (int.TryParse(e.Value?.ToString(), out int mapIndex))
-        {
-            ViewService.SetMap((GameMap)mapIndex);
-        }
     }
 
     private void ShowHome() => ViewService.SetView("home");
