Added Update Feature!

--- a/UORespawnApp/Components/Layout/NavMenu.razor
+++ b/UORespawnApp/Components/Layout/NavMenu.razor
@@ -73,6 +73,9 @@
                 <span class="bi @themeIcon" aria-hidden="true"></span> @themeText
             </button>
         </div>
+        
+        <!-- Update Checker at bottom of nav -->
+        <UpdateNotification />
     </nav>
 </div>
 
